# issue-orchestrator

./: .agent-done-marker  .claude.json.backup  .gitignore  .issue-orchestrator.e2e.yaml  .issue-orchestrator.yaml  .test-issue-104-completed  .venv  AGENTS.md  AGENT_PROTOCOL.md  AI-NEXT.md  AI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION.md  FUTURE.md  HOOKS.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TEST_TRACKING.md  TODO.md  e2e-double-review.txt  e2e-test-output.txt  export_source.sh  pyproject.toml  pyrightconfig.json  pyrightconfig.strict.json  renovate.json  test-pr-investigation.txt  test_backend_completion.md
.claude/: settings.json
.claude/commands/: deps-batch.md
.claude/debug/: 0147b160-93ae-4858-a7e0-6ccdeadfebd9.txt  04c6c4be-c6d9-419d-a586-480aface36d3.txt  0699f9bf-634c-4888-8e35-e5fb87a1c74e.txt  0791f88a-a046-4ef3-8182-8bd3ca176169.txt  15f50367-eebe-4b0a-adf7-bed9acd19f08.txt  18974d6a-e654-4789-8099-e2397f5a8114.txt  18cd83b3-bede-49d6-a225-b17c181c69b6.txt  190839a2-37f8-4456-9e03-c903b25a20f9.txt  1973f2ed-d026-4ba2-837a-cf642d7b7fd1.txt  1be71601-998a-408f-b2d9-8578c19f762e.txt  1df2a05b-ab14-463d-b3b5-ed25527776c7.txt  21056416-17f5-41e0-94a7-0eaaf65128ae.txt  21af9eba-c0f3-491a-8b58-1934072c4928.txt  2223120e-473f-4314-9206-90928196d549.txt  22f87444-69a5-4b7a-be24-bb3ea054315c.txt  253b413b-2bb4-4ec3-93de-39662c54b88f.txt  259594f9-515a-470f-a00a-be7fc58673b3.txt  27e15aa6-26bb-40e9-a70f-ca5580984fa9.txt  28c24863-4134-4047-a69f-7ffa4f42b770.txt  2a267252-8f35-4379-a927-f014a7a75b15.txt  2aea3bc9-b3ed-4e4a-9f5b-443433c4d070.txt  2bb3d9af-345d-47a9-8cf4-6e4abfa19276.txt  2cd21d89-1766-4698-84db-bbf1b8aeb542.txt  30559612-07fd-4efa-97dd-370d90be7851.txt  3a58a78d-0ac9-4a51-a521-697826a42d53.txt  3b864763-6afc-4490-9088-b551a8a64a2a.txt  3fbaae6a-0fb9-42e9-b116-fc13540f3683.txt  41ec8f5f-0a5b-4c3d-a23a-734e4c967937.txt  4973eb11-08bc-4176-af62-702168f23d9f.txt  51e090ce-c9d6-4b3f-b1f1-56eaf308e39b.txt  52b1bdc0-7b7e-4483-9928-76e30a2fc18a.txt  57e1ab8e-ee60-48e2-b6e8-b8f6534efe1b.txt  58333af6-bbb7-4c40-91c0-cdbfa03a4f2d.txt  58d1bca1-12a1-4c11-a8f1-7d2b427fa36a.txt  616f1975-1778-4dc6-9323-7ebe8229a4ac.txt  6240d1b6-b3fb-4f0a-b21b-c18267f092e1.txt  648e5393-ee77-4a09-ba78-32412395064e.txt  6834df54-271b-4f49-b028-8191bea3ffd2.txt  695848c1-e539-463d-98c8-927cac1da0fe.txt  6c1eee22-f609-4e81-9653-5daeadcc6cf3.txt  (+46 more)
.claude/hooks/: block-no-verify.sh  parse_hook_input.py
.claude/shell-snapshots/: snapshot-zsh-1767761717457-pugg0b.sh
.claude/skills/: readiness
.claude/statsig/: statsig.cached.evaluations.506c4a2d6f  statsig.failed_logs.658916400  statsig.last_modified_time.evaluations  statsig.session_id.2656274335  statsig.stable_id.2656274335
.devcontainer/: devcontainer.json
.githooks/: applypatch-msg  pre-push  prepare-commit-msg
.github/: CODEOWNERS  dco.yml  dependabot.yml
.github/workflows/: architecture-guardrails.yml  dependabot-auto-merge.yml  validate.yml
.issue-orchestrator/: completion-agent_backend.json  config.yaml  safety-state.json  session-identity-issue-2643.json  session-latest.json  worktree-id
.issue-orchestrator/config/: hooks-validate.yaml  main.yaml  z-codespaces.yaml
.issue-orchestrator/prompts/: reviewer.md  simple-fix.md  triage.md
.prompts/: backend.md  reviewer.md  simple-fix.md  triage.md
contracts/: run-manifest.schema.json
contracts/public/: dashboard.view_model.json  sse.dependency.blocked.json  sse.dependency.unblocked.json  sse.history.reconciled.json  sse.orchestrator.paused.json  sse.orchestrator.resumed.json  sse.provider.outage_entered.json  sse.provider.outage_exited.json  sse.provider.retry_attempted.json  sse.provider.retry_scheduled.json  sse.queue.changed.json  sse.session.completed.json  sse.session.started.json  sse.shutdown_requested.json  sse.stale.in_progress_cleared.json  sse.stale.in_progress_detected.json  sse.stale.persistent_detected.json  sse.startup_complete.json  stack.dependency_gate_view.json  timeline.issue.json
coverage/: simulated_scenarios_uncovered.txt  simulated_scenarios_uncovered_only.txt
docs/: ARCHITECTURE.md  DEBUGGING.md  HOOKS.md  README.md  TUTORIAL.md  undtraced.md
docs/ai/: ARCH_REFACTOR_PLAN.md  GITHUB_TOKEN_SETUP.md
docs/api/: openapi.json  ui-openapi.json
docs/architecture/: ADAPTER_BOUNDARIES.md  README.md  control_center_lifecycle_model.md  hooks.md  internal-architecture.md  validation.md
docs/archive/: README.md  abstraction-improvements.md  ai-onboarding-prompts.md  reviewer-agent-done.md  undtraced-run-playbook.md  untraced-run-playbook.md
docs/design/: architecture_guardrails.md  blocked-issues-ux-ideas.md  core_concepts.md  design_tradeoffs.md  external_state_reconciliation.md  goal-pilot.md  guardrails.md  security_isolation.md  sustainable-agentic-development.md  validation_model.md  validation_record_format.md  validation_yaml_schema.md  verify_agent_sandbox_spec.md
docs/development/: AI_ONBOARDING_PROMPTS.md  ARTIFACT_CONTRACTS_PLAN.md  CACHING_ETAGS.md  CREATE_GUARDRAILS.md  GITHUB_TOKEN_SETUP.md  RELEASE.md  (+11 more)
examples/: config.example.yaml
hooks/: AGENTS.md  pre-commit  pre-push
quality/: guardrails-baseline.json
repo-guardrails/: README.md
repo-specific/: Makefile  README.md
scripts/: check_agents_md.sh  check_docs_md.py  coverage_guardrail.py  create_issue.py  debug_e2e_timeline.py  deps-batch-drive.sh  e2e_bisect.py  export_source.sh  fix_agents_md.sh  generate-mcp-json.sh  generate_openapi.py  generate_public_contracts.py  generate_run_manifest_contract.py  generate_ui_contracts.py  install-hooks.sh  issues.py  local_test.py  prepare_release.py  preview_markdown.py  regen_goldens.py  run_portfolio_benchmark.py  setup_test_issues.py  snapshot_e2e_run.py  spike_subprocess_claude.py  start_control_center.sh  teardown_test_issues.py  temp-worktree-setup.sh  test_agent.py  test_reset.py  verify-pr.sh
tests/: AGENTS.md  __init__.py  builders.py  conftest.py
tools/: ast_guardrails.yml  check_arch_guardrails.py  print_orchestrator_env.py  quality_guardrails.py  quality_guardrails.yml  trace-issue
(+1842 files in other folders)
