[project]
name = "issue-orchestrator"
version = "0.1.0"
description = "Orchestrate AI agents working on GitHub issues in parallel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Bruce Gordon" }
]
keywords = ["ai", "github", "orchestration", "claude", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",      # Nice terminal UI
    "libtmux>=0.37",   # Pythonic tmux control
    "textual>=0.40",   # TUI framework with keyboard input
    "fastapi>=0.104",  # Web dashboard
    "uvicorn>=0.24",   # ASGI server
    "jinja2>=3.1",     # HTML templates
    "sse-starlette>=1.6",  # Server-Sent Events for real-time updates
    "pluggy>=1.3",     # Plugin architecture (same as pytest uses)
    "transitions>=0.9",  # Lightweight state machine library
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",  # For e2e test timeouts
    "pyright>=1.1",
    "import-linter>=2.0",  # Architecture boundary enforcement
]

[project.scripts]
issue-orchestrator = "issue_orchestrator.cli:main"
agent-done = "issue_orchestrator.agent_done:main"
verify-agent-sandbox = "issue_orchestrator.control.sandbox_verify:main"
prepush-check = "issue_orchestrator.control.prepush_check:main"

# Plugin entry points - third-party packages can add their own
[project.entry-points."issue_orchestrator.plugins"]
# Built-in plugins are loaded directly, but listed here for reference
# tmux = "issue_orchestrator.adapters.terminal_tmux:TmuxPlugin"
# iterm2 = "issue_orchestrator.adapters.terminal_iterm:ITermPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/issue_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: End-to-end tests with real GitHub (requires gh auth and E2E_TEST_REPO)",
    "live: Tests that require network access and external services",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

# Architecture boundary enforcement
[tool.importlinter]
root_package = "issue_orchestrator"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Core must not import pluggy or outer layers"
type = "forbidden"
source_modules = [
  "issue_orchestrator.domain",
  "issue_orchestrator.ports",
]
forbidden_modules = [
  "pluggy",
  "issue_orchestrator.execution",
  "issue_orchestrator.observation",
  "issue_orchestrator.hooks",
  "issue_orchestrator.ipc",
  "issue_orchestrator.scripts",
  "issue_orchestrator.templates",
]

[[tool.importlinter.contracts]]
name = "Domain must not import control (keeps invariants pure)"
type = "forbidden"
source_modules = ["issue_orchestrator.domain"]
forbidden_modules = ["issue_orchestrator.control"]

[[tool.importlinter.contracts]]
name = "Ports must not import outer layers"
type = "forbidden"
source_modules = ["issue_orchestrator.ports"]
forbidden_modules = [
  "issue_orchestrator.execution",
  "issue_orchestrator.observation",
  "issue_orchestrator.hooks",
  "issue_orchestrator.ipc",
]
