[project]
name = "issue-orchestrator"
version = "0.1.0"
description = "Orchestrate AI agents working on GitHub issues in parallel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Bruce Gordon" }
]
keywords = ["ai", "github", "orchestration", "claude", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agent-runner @ file:packages/agent_runner",  # Provider-agnostic agent execution
    "pyyaml>=6.0",
    "rich>=13.0",      # Nice terminal UI
    "textual>=0.40",   # TUI framework with keyboard input
    "fastapi>=0.104",  # Web dashboard
    "uvicorn>=0.24",   # ASGI server
    "jinja2>=3.1",     # HTML templates
    "sse-starlette>=1.6",  # Server-Sent Events for real-time updates
    "pluggy>=1.3",     # Plugin architecture (same as pytest uses)
    "transitions>=0.9",  # Lightweight state machine library
    "httpx>=0.27",     # GitHub HTTP client
    "keyring>=25.0",   # OS keychain for secure token storage
    "tenacity>=8.0",   # Retry with exponential backoff
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",  # For e2e test timeouts
    "pytest-xdist>=3.5",  # Parallel test execution
    "pyright>=1.1.408",
    "ruff>=0.9",  # Fast Python linter
    "import-linter>=2.0",  # Architecture boundary enforcement
    "playwright>=1.57",  # Browser automation for web UI tests
    "pytest-playwright>=0.7",  # Playwright pytest integration
]

[project.scripts]
issue-orchestrator = "issue_orchestrator.entrypoints.cli:main"
agent-done = "issue_orchestrator.entrypoints.cli_tools.agent_done:main"
verify-agent-sandbox = "issue_orchestrator.execution.sandbox_verify:main"
prepush-check = "issue_orchestrator.entrypoints.cli_tools.prepush_check:main"

# Plugin entry points - third-party packages can add their own
[project.entry-points."issue_orchestrator.plugins"]
# Built-in plugins are loaded directly, but listed here for reference
# tmux = "issue_orchestrator.adapters.terminal_tmux:TmuxPlugin"
# iterm2 = "issue_orchestrator.adapters.terminal_iterm:ITermPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/issue_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/agent_runner/tests"]
pythonpath = ["src", "packages/agent_runner/src"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
markers = [
    "e2e: End-to-end tests with real GitHub (requires gh auth and E2E_TEST_REPO)",
    "integration: Integration tests that may exercise external adapters",
    "live: Tests that require network access and external services",
    "gh_activity_limit: Enforce GH API activity limits per test (test_gh_activity_limit, system_gh_activity_limit)",
    "requires_infra: Tests requiring external infrastructure (GitHub token, running services). Run in CI, excluded from pre-push.",
]

[tool.pyright]
include = ["src", "packages/agent_runner/src"]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

# Architecture boundary enforcement
[tool.importlinter]
root_package = "issue_orchestrator"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Core must not import pluggy or outer layers"
type = "forbidden"
source_modules = [
  "issue_orchestrator.domain",
  "issue_orchestrator.ports",
]
forbidden_modules = [
  "pluggy",
  "issue_orchestrator.execution",
  "issue_orchestrator.observation",
  "issue_orchestrator.infra.hooks",
  "issue_orchestrator.ipc",
  "issue_orchestrator.scripts",
  "issue_orchestrator.templates",
]

[[tool.importlinter.contracts]]
name = "Domain must not import control (keeps invariants pure)"
type = "forbidden"
source_modules = ["issue_orchestrator.domain"]
forbidden_modules = ["issue_orchestrator.control"]

[[tool.importlinter.contracts]]
name = "Ports must not import outer layers"
type = "forbidden"
source_modules = ["issue_orchestrator.ports"]
forbidden_modules = [
  "issue_orchestrator.execution",
  "issue_orchestrator.observation",
  "issue_orchestrator.infra.hooks",
  "issue_orchestrator.ipc",
]

[[tool.importlinter.contracts]]
name = "Control must not import execution (use ports)"
type = "forbidden"
source_modules = ["issue_orchestrator.control"]
forbidden_modules = ["issue_orchestrator.execution"]
# Allow TYPE_CHECKING import of Orchestrator for type hints
ignore_imports = [
  "issue_orchestrator.control.orchestrator_support -> issue_orchestrator.infra.orchestrator",
]

[[tool.importlinter.contracts]]
name = "Orchestrator must not import execution directly"
type = "forbidden"
source_modules = ["issue_orchestrator.infra.orchestrator"]
forbidden_modules = [
  "issue_orchestrator.execution",
  "issue_orchestrator.adapters.worktree._worktree",
  "issue_orchestrator._github_impl",
  "issue_orchestrator.adapters.terminal._tmux",
  "issue_orchestrator.adapters.terminal._iterm2",
]
# Allow orchestrator to import bootstrap for run_orchestrator() entry point
# This is the only allowed path to execution - via the composition root
ignore_imports = [
  "issue_orchestrator.infra.orchestrator -> issue_orchestrator.entrypoints.bootstrap",
]

[[tool.importlinter.contracts]]
name = "Legacy GitHub CLI impl is forbidden"
type = "forbidden"
source_modules = ["issue_orchestrator"]
forbidden_modules = ["issue_orchestrator._github_impl"]

[[tool.importlinter.contracts]]
name = "Core layers must not import subprocess"
type = "forbidden"
source_modules = [
  "issue_orchestrator.control",
  "issue_orchestrator.domain",
  "issue_orchestrator.ports",
]
forbidden_modules = ["subprocess"]
# Allow TYPE_CHECKING import of Orchestrator for type hints
ignore_imports = [
  "issue_orchestrator.control.orchestrator_support -> issue_orchestrator.infra.orchestrator",
]

[[tool.importlinter.contracts]]
name = "Only execution may import httpx"
type = "forbidden"
source_modules = [
  "issue_orchestrator",
]
forbidden_modules = ["httpx"]
ignore_imports = [
  "issue_orchestrator.adapters.github.http_client -> httpx",
  "issue_orchestrator.entrypoints.cli -> httpx",
  "issue_orchestrator.entrypoints.control_api -> httpx",  # Passthrough to orchestrator
]

# agent-runner package boundary
[[tool.importlinter.contracts]]
name = "agent_runner must not import issue_orchestrator"
type = "forbidden"
source_modules = ["agent_runner"]
forbidden_modules = ["issue_orchestrator"]

# Ruff linter - complexity checks (reporting only, --exit-zero)
[tool.ruff]
src = ["src", "packages/agent_runner/src"]
target-version = "py311"

[tool.ruff.lint]
# C901: cyclomatic complexity (default max: 10)
# PLR0912: too many branches (default max: 12)
# SLF001: private member access (access to _private members from outside class)
select = ["C901", "PLR0912", "SLF001"]

[tool.ruff.lint.per-file-ignores]
# Complexity rules (C901, PLR0912) are enforced for production code clarity, not test infrastructure.
"tests/**/*.py" = ["C901", "PLR0912"]
