[project]
name = "issue-orchestrator"
version = "0.10.0"
description = "Orchestrate AI agents working on GitHub issues in parallel"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Bruce Gordon" }
]
keywords = ["ai", "github", "orchestration", "claude", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",      # Nice terminal UI
    "textual>=0.40",   # TUI framework with keyboard input
    "fastapi>=0.104",  # Web dashboard
    "uvicorn>=0.24",   # ASGI server
    "jinja2>=3.1",     # HTML templates
    "sse-starlette>=1.6",  # Server-Sent Events for real-time updates
    "pluggy>=1.3",     # Plugin architecture (same as pytest uses)
    "transitions>=0.9",  # Lightweight state machine library
    "httpx>=0.27",     # GitHub HTTP client
    "keyring>=25.0",   # OS keychain for secure token storage
    "pydantic>=2.0",   # Data-driven settings schema with validation
    "tenacity>=8.0",   # Retry with exponential backoff
    "pexpect>=4.8",    # Robust PTY handling for subprocess output capture
    "mcp>=1.0.0",      # MCP server support
    "pystray>=0.19",   # System tray icon (macOS menu bar / Windows tray)
    "Pillow>=10.0",    # Image handling for tray icon
    "defusedxml>=0.7",  # Harden XML parsing for untrusted reports
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",  # For e2e test timeouts
    "pytest-xdist>=3.5",  # Parallel test execution
    "pyright>=1.1.408",
    "ruff>=0.9",  # Fast Python linter
    "import-linter>=2.0",  # Architecture boundary enforcement
    "beautifulsoup4>=4.12",  # HTML parsing for template tests
    "lxml>=6.1.0",  # Fast HTML parser for BeautifulSoup
    "playwright==1.57.0",  # Pinned to avoid 250MB browser re-downloads on version bumps
    "pytest-playwright>=0.7",  # Playwright pytest integration
    "hypothesis>=6.0",  # Property-based testing
]

[project.scripts]
issue-orchestrator = "issue_orchestrator.entrypoints.cli:main"
coding-done = "issue_orchestrator.entrypoints.cli_tools.coding_done:safe_main"
reviewer-done = "issue_orchestrator.entrypoints.cli_tools.reviewer_done:safe_main"
verify-agent-sandbox = "issue_orchestrator.execution.sandbox_verify:main"
prepush-check = "issue_orchestrator.entrypoints.cli_tools.prepush_check:main"
issue-orchestrator-mcp = "issue_orchestrator.entrypoints.mcp_server:main"

# Plugin entry points - third-party packages can add their own
[project.entry-points."issue_orchestrator.plugins"]
# Built-in plugins are loaded directly, but listed here for reference
# tmux = "issue_orchestrator.adapters.terminal_tmux:TmuxPlugin"
# iterm2 = "issue_orchestrator.adapters.terminal_iterm:ITermPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/issue_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/agent_runner/tests"]
pythonpath = ["src", "packages/agent_runner/src"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
# Emit per-testcase <system-out>/<system-err>/log records in the JUnit XML so
# the dashboard's captured-output viewer (validation_viewer.js) can render
# stdout/stderr/log per case instead of "not captured". Default pytest
# behaviour is junit_logging = "no", which strips captured output entirely.
junit_logging = "all"
filterwarnings = [
    # Python 3.14 warns about forkpty in multi-threaded processes.
    # Our PTY tests (pexpect.spawn) trigger this but run sequentially in xdist_group("pty"),
    # so deadlock risk is minimal. Safe to ignore until pexpect provides an alternative.
    "ignore:This process.*is multi-threaded, use of forkpty:DeprecationWarning",
]
markers = [
    "e2e: End-to-end tests with real GitHub (requires gh auth and E2E_TEST_REPO)",
    "heavy_e2e: Expensive journey-level tests for onboarding or full-stack orchestration flows",
    "integration: Integration tests that may exercise external adapters",
    "live: Tests that require network access and external services",
    "live_agent: Tests that run real AI provider CLI sessions under the e2e flake-management lane",
    "live_codex: Live Codex CLI smoke tests collected by e2e or dedicated live lanes",
    "xdist_group(name): Group tests to run serially under pytest-xdist --dist=loadgroup",
    "gh_activity_limit: Enforce GH API activity limits per test (test_gh_activity_limit, system_gh_activity_limit)",
    "requires_infra: Tests requiring external infrastructure (GitHub token, running services). Run in CI, excluded from pre-push.",
]

[tool.pyright]
include = ["src", "packages/agent_runner/src"]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

# Architecture boundary enforcement
[tool.importlinter]
root_package = "issue_orchestrator"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Core must not import pluggy or outer layers"
type = "forbidden"
source_modules = [
  "issue_orchestrator.domain",
  "issue_orchestrator.ports",
]
forbidden_modules = [
  "pluggy",
  "issue_orchestrator.execution",
  "issue_orchestrator.observation",
  "issue_orchestrator.infra.hooks",
  "issue_orchestrator.ipc",
  "issue_orchestrator.scripts",
  "issue_orchestrator.templates",
]

[[tool.importlinter.contracts]]
name = "Domain must not import control (keeps invariants pure)"
type = "forbidden"
source_modules = ["issue_orchestrator.domain"]
forbidden_modules = ["issue_orchestrator.control"]

[[tool.importlinter.contracts]]
name = "Ports must not import outer layers"
type = "forbidden"
source_modules = ["issue_orchestrator.ports"]
forbidden_modules = [
  "issue_orchestrator.execution",
  "issue_orchestrator.observation",
  "issue_orchestrator.infra.hooks",
  "issue_orchestrator.ipc",
]

[[tool.importlinter.contracts]]
name = "Control must not import execution (use ports)"
type = "forbidden"
source_modules = ["issue_orchestrator.control"]
forbidden_modules = ["issue_orchestrator.execution"]
# Allow TYPE_CHECKING import of Orchestrator for type hints
ignore_imports = [
  "issue_orchestrator.control.orchestrator_support -> issue_orchestrator.infra.orchestrator",
]

[[tool.importlinter.contracts]]
name = "Control and observation must not import adapters directly"
type = "forbidden"
source_modules = [
  "issue_orchestrator.control",
  "issue_orchestrator.observation",
]
forbidden_modules = ["issue_orchestrator.adapters"]
allow_indirect_imports = true
# Existing diagnostics debt. New adapter imports in control/observation are blocked;
# remove this exception when session log lookup is routed through a port/owner.
ignore_imports = [
  "issue_orchestrator.control.session_completion_diagnostics -> issue_orchestrator.adapters.session_log.registry",
]

[[tool.importlinter.contracts]]
name = "Orchestrator must not import execution directly"
type = "forbidden"
source_modules = ["issue_orchestrator.infra.orchestrator"]
forbidden_modules = [
  "issue_orchestrator.execution",
  "issue_orchestrator.adapters.worktree._worktree",
  "issue_orchestrator._github_impl",
  "issue_orchestrator.adapters.terminal._tmux",
  "issue_orchestrator.adapters.terminal._iterm2",
]
# Allow orchestrator to import bootstrap for run_orchestrator() entry point
# This is the only allowed path to execution - via the composition root
ignore_imports = [
  "issue_orchestrator.infra.orchestrator -> issue_orchestrator.entrypoints.bootstrap",
]

[[tool.importlinter.contracts]]
name = "Legacy GitHub CLI impl is forbidden"
type = "forbidden"
source_modules = [
  "issue_orchestrator.adapters",
  "issue_orchestrator.control",
  "issue_orchestrator.domain",
  "issue_orchestrator.entrypoints",
  "issue_orchestrator.events",
  "issue_orchestrator.execution",
  "issue_orchestrator.infra",
  "issue_orchestrator.observation",
  "issue_orchestrator.ports",
  "issue_orchestrator.testing",
  "issue_orchestrator.infra.ai_diagnose",
  "issue_orchestrator.infra.ai_keys",
  "issue_orchestrator.infra.ai_systems_config",
  "issue_orchestrator.infra.analysis",
  "issue_orchestrator.infra.audit",
  "issue_orchestrator.infra.config",
  "issue_orchestrator.infra.doctor.checks.ai",
  "issue_orchestrator.infra.doctor.checks.config",
  "issue_orchestrator.infra.doctor.checks.e2e",
  "issue_orchestrator.infra.doctor.checks.github",
  "issue_orchestrator.infra.doctor.checks.guardrails",
  "issue_orchestrator.infra.doctor.checks.hooks",
  "issue_orchestrator.infra.doctor.checks.review",
  "issue_orchestrator.infra.doctor.checks.schema",
  "issue_orchestrator.infra.doctor.checks.workspace",
  "issue_orchestrator.infra.doctor.runner",
  "issue_orchestrator.infra.doctor.types",
  "issue_orchestrator.infra.doctor",
  "issue_orchestrator.infra.e2e_db",
  "issue_orchestrator.infra.e2e_run_diagnosis",
  "issue_orchestrator.infra.e2e_runner",
  "issue_orchestrator.infra.emit",
  "issue_orchestrator.infra.env",
  "issue_orchestrator.infra.gh_audit",
  "issue_orchestrator.infra.hooks.hooks",
  "issue_orchestrator.infra.hooks.hookspec",
  "issue_orchestrator.infra.issue_diagnostics",
  "issue_orchestrator.infra.launcher",
  "issue_orchestrator.infra.logging_config",
  "issue_orchestrator.infra.orchestrator",
  "issue_orchestrator.infra.repo_identity",
  "issue_orchestrator.infra.repo_lock",
  "issue_orchestrator.infra.repo_registry",
  "issue_orchestrator.infra.ai_gate_state",
  "issue_orchestrator.infra.session_failure_diagnosis",
  "issue_orchestrator.infra.settings_schema",
  "issue_orchestrator.infra.startup_errors",
  "issue_orchestrator.infra.supervisor",
  "issue_orchestrator.infra.validation_state",
  "issue_orchestrator.infra.validators.agent",
  "issue_orchestrator.infra.validators.base",
  "issue_orchestrator.infra.validators.isolation",
  "issue_orchestrator.infra.validators.review",
  "issue_orchestrator.infra.validators.template",
  "issue_orchestrator.infra.validators.unknown_fields",
  "issue_orchestrator.infra.validators.worktree",
]
forbidden_modules = ["issue_orchestrator._github_impl"]

[[tool.importlinter.contracts]]
name = "Core layers must not import subprocess"
type = "forbidden"
source_modules = [
  "issue_orchestrator.control",
  "issue_orchestrator.domain",
  "issue_orchestrator.ports",
]
forbidden_modules = ["subprocess"]
# Allow TYPE_CHECKING import of Orchestrator for type hints
ignore_imports = [
  "issue_orchestrator.control.orchestrator_support -> issue_orchestrator.infra.orchestrator",
]

[[tool.importlinter.contracts]]
name = "Only execution may import httpx"
type = "forbidden"
source_modules = [
  "issue_orchestrator.adapters",
  "issue_orchestrator.control",
  "issue_orchestrator.domain",
  "issue_orchestrator.entrypoints",
  "issue_orchestrator.events",
  "issue_orchestrator.execution",
  "issue_orchestrator.infra",
  "issue_orchestrator.observation",
  "issue_orchestrator.ports",
  "issue_orchestrator.testing",
  "issue_orchestrator.infra.ai_diagnose",
  "issue_orchestrator.infra.ai_keys",
  "issue_orchestrator.infra.ai_systems_config",
  "issue_orchestrator.infra.analysis",
  "issue_orchestrator.infra.audit",
  "issue_orchestrator.infra.config",
  "issue_orchestrator.infra.doctor.checks.ai",
  "issue_orchestrator.infra.doctor.checks.config",
  "issue_orchestrator.infra.doctor.checks.e2e",
  "issue_orchestrator.infra.doctor.checks.github",
  "issue_orchestrator.infra.doctor.checks.guardrails",
  "issue_orchestrator.infra.doctor.checks.hooks",
  "issue_orchestrator.infra.doctor.checks.review",
  "issue_orchestrator.infra.doctor.checks.schema",
  "issue_orchestrator.infra.doctor.checks.workspace",
  "issue_orchestrator.infra.doctor.runner",
  "issue_orchestrator.infra.doctor.types",
  "issue_orchestrator.infra.doctor",
  "issue_orchestrator.infra.e2e_db",
  "issue_orchestrator.infra.e2e_run_diagnosis",
  "issue_orchestrator.infra.e2e_runner",
  "issue_orchestrator.infra.emit",
  "issue_orchestrator.infra.env",
  "issue_orchestrator.infra.gh_audit",
  "issue_orchestrator.infra.hooks.hooks",
  "issue_orchestrator.infra.hooks.hookspec",
  "issue_orchestrator.infra.issue_diagnostics",
  "issue_orchestrator.infra.launcher",
  "issue_orchestrator.infra.logging_config",
  "issue_orchestrator.infra.orchestrator",
  "issue_orchestrator.infra.repo_identity",
  "issue_orchestrator.infra.repo_lock",
  "issue_orchestrator.infra.repo_registry",
  "issue_orchestrator.infra.ai_gate_state",
  "issue_orchestrator.infra.session_failure_diagnosis",
  "issue_orchestrator.infra.settings_schema",
  "issue_orchestrator.infra.startup_errors",
  "issue_orchestrator.infra.supervisor",
  "issue_orchestrator.infra.validation_state",
  "issue_orchestrator.infra.validators.agent",
  "issue_orchestrator.infra.validators.base",
  "issue_orchestrator.infra.validators.isolation",
  "issue_orchestrator.infra.validators.review",
  "issue_orchestrator.infra.validators.template",
  "issue_orchestrator.infra.validators.unknown_fields",
  "issue_orchestrator.infra.validators.worktree",
]
forbidden_modules = ["httpx"]
ignore_imports = [
  "issue_orchestrator.adapters.github.http_client -> httpx",
  "issue_orchestrator.execution.orchestrator_http_api -> httpx",
  "issue_orchestrator.entrypoints.cli -> httpx",
]

# _vendor/agent_runner has been fully migrated to execution/.
# These contracts are no longer needed — the package no longer exists.

[[tool.importlinter.contracts]]
name = "orchestrator must not import external agent_runner package"
type = "forbidden"
source_modules = [
  "issue_orchestrator.adapters",
  "issue_orchestrator.agent_runner",
  "issue_orchestrator.control",
  "issue_orchestrator.domain",
  "issue_orchestrator.entrypoints",
  "issue_orchestrator.events",
  "issue_orchestrator.execution",
  "issue_orchestrator.infra",
  "issue_orchestrator.observation",
  "issue_orchestrator.ports",
  "issue_orchestrator.testing",
  "issue_orchestrator.infra.ai_diagnose",
  "issue_orchestrator.infra.ai_keys",
  "issue_orchestrator.infra.ai_systems_config",
  "issue_orchestrator.infra.analysis",
  "issue_orchestrator.infra.audit",
  "issue_orchestrator.infra.config",
  "issue_orchestrator.infra.doctor.checks.ai",
  "issue_orchestrator.infra.doctor.checks.config",
  "issue_orchestrator.infra.doctor.checks.e2e",
  "issue_orchestrator.infra.doctor.checks.github",
  "issue_orchestrator.infra.doctor.checks.guardrails",
  "issue_orchestrator.infra.doctor.checks.hooks",
  "issue_orchestrator.infra.doctor.checks.review",
  "issue_orchestrator.infra.doctor.checks.schema",
  "issue_orchestrator.infra.doctor.checks.workspace",
  "issue_orchestrator.infra.doctor.runner",
  "issue_orchestrator.infra.doctor.types",
  "issue_orchestrator.infra.doctor",
  "issue_orchestrator.infra.e2e_db",
  "issue_orchestrator.infra.e2e_run_diagnosis",
  "issue_orchestrator.infra.e2e_runner",
  "issue_orchestrator.infra.emit",
  "issue_orchestrator.infra.env",
  "issue_orchestrator.infra.gh_audit",
  "issue_orchestrator.infra.hooks.hooks",
  "issue_orchestrator.infra.hooks.hookspec",
  "issue_orchestrator.infra.issue_diagnostics",
  "issue_orchestrator.infra.launcher",
  "issue_orchestrator.infra.logging_config",
  "issue_orchestrator.infra.orchestrator",
  "issue_orchestrator.infra.repo_identity",
  "issue_orchestrator.infra.repo_lock",
  "issue_orchestrator.infra.repo_registry",
  "issue_orchestrator.infra.ai_gate_state",
  "issue_orchestrator.infra.session_failure_diagnosis",
  "issue_orchestrator.infra.settings_schema",
  "issue_orchestrator.infra.startup_errors",
  "issue_orchestrator.infra.supervisor",
  "issue_orchestrator.infra.validation_state",
  "issue_orchestrator.infra.validators.agent",
  "issue_orchestrator.infra.validators.base",
  "issue_orchestrator.infra.validators.isolation",
  "issue_orchestrator.infra.validators.review",
  "issue_orchestrator.infra.validators.template",
  "issue_orchestrator.infra.validators.unknown_fields",
  "issue_orchestrator.infra.validators.worktree",
]
forbidden_modules = ["agent_runner"]

# Ruff linter - complexity checks (reporting only, --exit-zero)
[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
# C901: cyclomatic complexity (default max: 10)
# PLR0912: too many branches (default max: 12)
# SLF001: private member access (access to _private members from outside class)
# PGH004: blanket noqa suppressions
# S608:   SQL injection via string-based query construction. Covered as a
#         long-term ownership gate for security issue #6017 (F6) so the
#         codebase never silently regresses to f-string SQL. Known-safe
#         interpolations (allowlisted column names, dynamic IN-clause
#         placeholders) are marked ``# noqa: S608`` with justification at
#         the call site.
select = ["C901", "PLR0912", "PGH004", "SLF001", "S608"]

[tool.ruff.lint.per-file-ignores]
# Complexity rules (C901, PLR0912) are enforced for production code clarity, not test infrastructure.
# S608 is skipped in tests because test fixtures commonly build literal
# SQL via f-strings for setup / assertion purposes.
"tests/**/*.py" = ["C901", "PLR0912", "S608"]
